--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 	<groupId>com.dcorp.hightech</groupId>
 	<artifactId>acounts</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 	<name>acounts</name>
 	<description>Microservice For Accounts</description>
 	<properties>
@@ -74,6 +75,12 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+<!--					Start Generate image by BuildPacks-->
+<!--					Running "mvn spring-boot:build-image" command, Application's docker image will be built.-->
+					<image>
+						<name>phduongw/${project.artifactId}:s4</name>
+					</image>
+<!--					End Generate image by BuildPacks-->
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
